objects/npsp_plus__Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>npsp_plus__Crypto_HMac_Key__c</fullName>
        <label>Crypto HMac Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp_plus__Crypto_Key__c</fullName>
        <label>Crypto Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp_plus__Default_Org_Wide_Email__c</fullName>
        <label>Default Org Wide Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp_plus__Donation_Receipt_Email_Template_Name__c</fullName>
        <label>Donation Receipt Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp_plus__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Setting</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>